# SimplePaint

./: .editorconfig  LICENSE
Paint/: CMakeLists.txt
Paint/Debug/: CMakeCache.txt  Makefile  Paint.cbp  TestOpenGL.cbp  cmake_install.cmake
Paint/include/: brush.h  camera2d.h  circleshape.h  defines.hpp  drawmode.h  globaldefines.h  graphics.h  keyhandler.h  lineshape.h  multibuffer.hpp  renderwindow.h  shader.h  texture.h  vector2.hpp  vector3.hpp  vertex.h  vertexbuffer.h
Paint/misc/: build.bat
Paint/src/: brush.cpp  camera2d.cpp  circle_frag_shader.frag  circle_vert_shader.vert  circleshape.cpp  drawmode.cpp  frag_shader.frag  globaldefines.cpp  graphics.cpp  keyhandler.cpp  lineshape.cpp  main.cpp  multibuffer.cpp  renderwindow.cpp  shader.cpp  texture.cpp  texture_frag_shader.frag  texture_vert_shader.vert  vert_shader.vert  vertex.cpp  vertexbuffer.cpp
simple-paint/: .editorconfig  CMakeLists.txt
simple-paint/include/: application.h  brush.h  camera.h  component.h  componentmanager.h  componentmanager.hpp  engine.h  entity.h  entitymanager.h  entitymanager.hpp  event.h  global.h  graphicsystem.h  inputmanager.h  line.h  multibuffer.hpp  renderer.h  scene.h  scene.h.autosave  scenemanager.h  shader.h  shaderbuilder.h  system.h  systemmanager.hpp  texture.h  vector3.hpp  window.h
simple-paint/shaders/: texture_frag_shader.frag  texture_vert_shader.vert
simple-paint/src/: application.cpp  brush.cpp  component.cpp  componentmanager.cpp  engine.cpp  entity.cpp  entitymanager.cpp  event.cpp  global.cpp  graphicsystem.cpp  inputmanager.cpp  line.cpp  main.cpp  renderer.cpp  scene.cpp  scenemanager.cpp  shader.cpp  shaderbuilder.cpp  system.cpp  systemmanager.cpp  texture.cpp  window.cpp
simple-paint/tests/: CMakeLists.txt  graphicsystem_test.cpp  multibuffer_test.cpp  scene_test.cpp  shader_test.cpp  texture_test.cpp  window_test.cpp
writing-simple-paint-using-TDD/: CMakeLists.txt
writing-simple-paint-using-TDD/include/: renderwindow.h
writing-simple-paint-using-TDD/simple-paint/include/: opengl.h  renderwindow.h
writing-simple-paint-using-TDD/simple-paint/src/: main.cpp  opengl.cpp  renderwindow.cpp
writing-simple-paint-using-TDD/simple-paint/tests/: CMakeLists.txt  renderwindow_test.cpp
writing-simple-paint-using-TDD/src/: main.cpp  renderwindow.cpp
writing-simple-paint-using-TDD/tests/: CMakeLists.txt  first_test.cpp
